scripts/_compile_output_filename.txt
../sources/sum_1.cpp:4:1: error: 'main' must return 'int'
void main()
^~~~
int
../sources/sum_1.cpp:12:2: error: void function 'main' should not return a value [-Wreturn-type]
        return 0;
        ^      ~
2 errors generated.
